--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -159,6 +159,9 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\cybersecurity1.jpg" />
+    <Content Include="Content\Images\cybersecurity2.jpg" />
+    <Content Include="Content\Images\cybersecurity3.jpg" />
     <Content Include="Content\Images\ferris-state-university_2013-09-05_13-58-58.622.jpg" />
     <Content Include="Content\Images\img04.jpg" />
     <Content Include="Content\Images\red-logo.png" />
