--- a/Praesidium/Praesidium/Web.config
+++ b/Praesidium/Praesidium/Web.config
@@ -4,6 +4,14 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="NavigationEntity" connectionString="metadata=&quot;res://*/Data Models.NavigationEntity.csdl|res://*/Data Models.NavigationEntity.ssdl|res://*/Data Models.NavigationEntity.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=praesidium.database.windows.net;initial catalog=Praesidium;persist security info=True;user id=praesidium;password=_Solutions;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:praesidium.database.windows.net,1433;Initial Catalog=Praesidium;Persist Security Info=False;User ID=praesidium;Password=_Solutions;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />    
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -58,4 +66,14 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
