--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -162,7 +162,41 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\traffickingController.cs" />
     <Compile Include="DAL\NavigationItems.cs" />
+    <Compile Include="Data Context\Admin\AdminContext.cs" />
     <Compile Include="Data Context\NavigationContext.cs" />
+    <Compile Include="Data Models\Admin\AdminEntity.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AdminEntity.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\AdminEntity.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\AdminEntity.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AdminEntity.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\ShFile.cs">
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\ShFileKeyword.cs">
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\ShSyNavigationItem.cs">
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\ShSySection.cs">
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\ShUser.cs">
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Data Models\Admin\ShUserType.cs">
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data Models\NavigationEntity.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -204,6 +238,16 @@
     <Content Include="Content\Images\test2.jpg" />
     <Content Include="Content\Images\test3.jpg" />
     <Content Include="Content\Images\test4.jpg" />
+    <Content Include="Data Models\Admin\AdminEntity.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>AdminEntity.edmx</DependentUpon>
+      <LastGenOutput>AdminEntity.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Data Models\Admin\AdminEntity.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>AdminEntity.edmx</DependentUpon>
+      <LastGenOutput>AdminEntity.cs</LastGenOutput>
+    </Content>
     <Content Include="Data Models\NavigationEntity.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>NavigationEntity.edmx</DependentUpon>
@@ -229,6 +273,13 @@
     </EntityDeploy>
     <Content Include="Data Models\NavigationEntity.edmx.diagram">
       <DependentUpon>NavigationEntity.edmx</DependentUpon>
+    </Content>
+    <EntityDeploy Include="Data Models\Admin\AdminEntity.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>AdminEntity.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Data Models\Admin\AdminEntity.edmx.diagram">
+      <DependentUpon>AdminEntity.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -283,6 +334,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="DAL\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
