--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -1058,6 +1058,11 @@
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-small.eot" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\readme.md" />
     <Content Include="Scripts\tinymce\langs\readme.md" />
+    <Content Include="Views\Admin\AddFile.cshtml" />
+    <Content Include="Views\Admin\FilesEdit.cshtml" />
+    <Content Include="Views\Admin\FilesEditOld.cshtml" />
+    <Content Include="Views\Admin\SaveFile.cshtml" />
+    <Content Include="Views\Admin\Site_Documentation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
