--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -1065,6 +1065,7 @@
     <Content Include="Views\Download\Download.cshtml" />
     <Content Include="Views\Admin\FilesEdit.cshtml" />
     <Content Include="Views\Admin\Site_Documentation.cshtml" />
+    <Content Include="Views\CyberSecurity\Quiz.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
