--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -1051,6 +1051,7 @@
     <Content Include="Views\Shared\_AdminBreadcrumb.cshtml" />
     <Content Include="Views\Admin\Files.cshtml" />
     <Content Include="Views\Admin\FilesCreate.cshtml" />
+    <None Include="Views\Admin\FilesCreate.old" />
     <Content Include="Views\Shared\EditorTemplates\tinymce_jquery_full.cshtml" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce.woff" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce.ttf" />
