--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -266,15 +266,21 @@
     <Content Include="Content\AdminLTE\skins\_all-skins.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\adults.png" />
     <Content Include="Content\Images\cyber-crime.jpg" />
     <Content Include="Content\Images\cybersecurity1.jpg" />
     <Content Include="Content\Images\cybersecurity2.jpg" />
     <Content Include="Content\Images\cybersecurity3.jpg" />
     <Content Include="Content\Images\CyberSecurityHome.jpg" />
     <Content Include="Content\Images\ferris-state-university_2013-09-05_13-58-58.622.jpg" />
+    <Content Include="Content\Images\ferris.png" />
     <Content Include="Content\Images\img04.jpg" />
+    <Content Include="Content\Images\pic4.png" />
     <Content Include="Content\Images\red-logo.png" />
+    <Content Include="Content\Images\save10.png" />
     <Content Include="Content\Images\TCS_Solutions.png" />
+    <Content Include="Content\Images\teacher.png" />
+    <Content Include="Content\Images\teen.png" />
     <Content Include="Content\Images\test1.jpg" />
     <Content Include="Content\Images\test2.jpg" />
     <Content Include="Content\Images\test3.jpg" />
