Pictures Hopefully Work Now

--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -274,6 +274,7 @@
     <Content Include="Content\Images\CyberSecurityHome.jpg" />
     <Content Include="Content\Images\ferris-state-university_2013-09-05_13-58-58.622.jpg" />
     <Content Include="Content\Images\ferris.png" />
+    <Content Include="Content\Images\hands-tied.jpg" />
     <Content Include="Content\Images\img04.jpg" />
     <Content Include="Content\Images\pic4.png" />
     <Content Include="Content\Images\red-logo.png" />
