--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -267,18 +267,32 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\adults.png" />
+    <Content Include="Content\Images\cs_cloud.png" />
+    <Content Include="Content\Images\Cyber Crime Image.jpg" />
     <Content Include="Content\Images\cyber-crime.jpg" />
+    <Content Include="Content\Images\CyberSecurity - WC.png" />
     <Content Include="Content\Images\cybersecurity1.jpg" />
     <Content Include="Content\Images\cybersecurity2.jpg" />
     <Content Include="Content\Images\cybersecurity3.jpg" />
     <Content Include="Content\Images\CyberSecurityHome.jpg" />
+    <Content Include="Content\Images\CyberSecurity_1 - WC.png" />
+    <Content Include="Content\Images\CyberSecurity_2 - WC.png" />
+    <Content Include="Content\Images\cyber_attack.jpg" />
+    <Content Include="Content\Images\cyber_security_1.png" />
+    <Content Include="Content\Images\cyber_security_computer.jpg" />
+    <Content Include="Content\Images\feet.jpg" />
     <Content Include="Content\Images\ferris-state-university_2013-09-05_13-58-58.622.jpg" />
     <Content Include="Content\Images\ferris.png" />
+    <Content Include="Content\Images\hands-caged.jpg" />
+    <Content Include="Content\Images\hands-open.jpg" />
     <Content Include="Content\Images\hands-tied.jpg" />
+    <Content Include="Content\Images\Human Traffickking - WC.png" />
     <Content Include="Content\Images\img04.jpg" />
     <Content Include="Content\Images\pic4.png" />
     <Content Include="Content\Images\red-logo.png" />
     <Content Include="Content\Images\save10.png" />
+    <Content Include="Content\Images\Stop-Human-Trafficking.jpg" />
+    <Content Include="Content\Images\T.S.CSolutions.jpg" />
     <Content Include="Content\Images\TCS_Solutions.png" />
     <Content Include="Content\Images\teacher.png" />
     <Content Include="Content\Images\teen.png" />
