--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -270,6 +270,7 @@
     <Content Include="Content\Images\cs_cloud.png" />
     <Content Include="Content\Images\Cyber Crime Image.jpg" />
     <Content Include="Content\Images\cyber-crime.jpg" />
+    <Content Include="Content\Images\CyberLock.JPG" />
     <Content Include="Content\Images\CyberSecurity - WC.png" />
     <Content Include="Content\Images\cybersecurity1.jpg" />
     <Content Include="Content\Images\cybersecurity2.jpg" />
@@ -278,6 +279,7 @@
     <Content Include="Content\Images\CyberSecurity_1 - WC.png" />
     <Content Include="Content\Images\CyberSecurity_2 - WC.png" />
     <Content Include="Content\Images\cyber_attack.jpg" />
+    <Content Include="Content\Images\cyber_hoodie.jpg" />
     <Content Include="Content\Images\cyber_security_1.png" />
     <Content Include="Content\Images\cyber_security_computer.jpg" />
     <Content Include="Content\Images\feet.jpg" />
