Fixed The Carousel Images To All Be The Same Size

--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -269,6 +269,7 @@
     <Content Include="Content\Images\adults.png" />
     <Content Include="Content\Images\cs_cloud.png" />
     <Content Include="Content\Images\Cyber Crime Image.jpg" />
+    <Content Include="Content\Images\Cyber Final.png" />
     <Content Include="Content\Images\cyber-crime.jpg" />
     <Content Include="Content\Images\CyberLock.JPG" />
     <Content Include="Content\Images\CyberSecurity - WC.png" />
