--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -266,6 +266,7 @@
     <Content Include="Content\AdminLTE\skins\_all-skins.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\aboutus %282%29.jpg" />
     <Content Include="Content\Images\adults.png" />
     <Content Include="Content\Images\cs_cloud.png" />
     <Content Include="Content\Images\Cyber Crime Image.jpg" />
