--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -291,6 +291,7 @@
     <Content Include="Content\Images\hands-tied.jpg" />
     <Content Include="Content\Images\Human Traffickking - WC.png" />
     <Content Include="Content\Images\img04.jpg" />
+    <Content Include="Content\Images\Life is about finding people who are your kind of crazy! %285%29.png" />
     <Content Include="Content\Images\pic4.png" />
     <Content Include="Content\Images\red-logo.png" />
     <Content Include="Content\Images\save10.png" />
