Created a view in the database to speed up file list views.

--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -194,6 +194,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AdminEntity.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Data Models\Admin\FileView.cs">
+      <DependentUpon>AdminEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Data Models\Admin\ShFile.cs">
       <DependentUpon>AdminEntity.tt</DependentUpon>
     </Compile>
