--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -170,10 +170,12 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Content\FileViewController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AdminLteController.cs" />
     <Compile Include="Controllers\CyberSecurityController.cs" />
     <Compile Include="Controllers\DownloadController.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TraffickingController.cs" />
     <Compile Include="DAL\Admin\REFERENCE.cs" />
@@ -1121,9 +1123,11 @@
     <Content Include="Views\Admin\Site_Documentation.cshtml" />
     <Content Include="Views\CyberSecurity\Quiz.cshtml" />
     <Content Include="Views\Shared\_FileItems.cshtml" />
+    <Content Include="Views\File\Show.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\FileView\" />
     <Folder Include="Views\Manage\" />
   </ItemGroup>
   <ItemGroup>
