--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -297,10 +297,12 @@
     <Content Include="Content\Images\cyber_security_computer.jpg" />
     <Content Include="Content\Images\DANGER.jpg" />
     <Content Include="Content\Images\doc_icon.png" />
+    <Content Include="Content\Images\Facebook.svg" />
     <Content Include="Content\Images\fashion-person-woman-hand.jpg" />
     <Content Include="Content\Images\feet.jpg" />
     <Content Include="Content\Images\ferris-state-university_2013-09-05_13-58-58.622.jpg" />
     <Content Include="Content\Images\ferris.png" />
+    <Content Include="Content\Images\Google+.svg" />
     <Content Include="Content\Images\hacked-2127635_1920.png" />
     <Content Include="Content\Images\hands-caged.jpg" />
     <Content Include="Content\Images\hands-open.jpg" />
@@ -330,6 +332,7 @@
     <Content Include="Content\Images\test3.jpg" />
     <Content Include="Content\Images\test4.jpg" />
     <Content Include="Content\Images\trafficking.png" />
+    <Content Include="Content\Images\Twitter.svg" />
     <Content Include="Content\Images\website image.png" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Data Models\Admin\AdminEntity.Context.tt">
