Added some use business layer stuff, so I could address the users in the admin section

--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Controllers\ValidationController.cs" />
     <Compile Include="DAL\Admin\REFERENCE.cs" />
     <Compile Include="DAL\NavigationItems.cs" />
+    <Compile Include="DAL\Users.cs" />
     <Compile Include="Data Context\Admin\AdminContext.cs" />
     <Compile Include="Data Models\Admin\AdminEntity.Context.cs">
       <AutoGen>True</AutoGen>
