Got Rid Of Buttons that Went No where

--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -285,6 +285,7 @@
     <Content Include="Content\Images\about_us.png" />
     <Content Include="Content\Images\adults.png" />
     <Content Include="Content\Images\Alyssa.jpg" />
+    <Content Include="Content\Images\back-to-school-1576789_960_720.jpg" />
     <Content Include="Content\Images\Blake.png" />
     <Content Include="Content\Images\Caleb.png" />
     <Content Include="Content\Images\caution.jpg" />
@@ -340,6 +341,7 @@
     <Content Include="Content\Images\T.S.CSolutions.jpg" />
     <Content Include="Content\Images\TCS_Solutions.png" />
     <Content Include="Content\Images\teacher.png" />
+    <Content Include="Content\Images\teachers.jpg" />
     <Content Include="Content\Images\teen.png" />
     <Content Include="Content\Images\test1.jpg" />
     <Content Include="Content\Images\test2.jpg" />
