Added A Picture To Thank On About Us

--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -331,6 +331,7 @@
     <Content Include="Content\Images\pexels-photo-266046.jpeg" />
     <Content Include="Content\Images\pexels-photo-9816.jpeg" />
     <Content Include="Content\Images\pic4.png" />
+    <Content Include="Content\Images\pizap.com14934192136714.jpg" />
     <Content Include="Content\Images\ppt_icon.png" />
     <Content Include="Content\Images\quiz.jpg" />
     <Content Include="Content\Images\red-logo.png" />
