--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -353,7 +353,7 @@
     <Content Include="Content\Images\T.S.CSolutions.jpg" />
     <Content Include="Content\Images\TCS_Solutions.png" />
     <Content Include="Content\Images\teacher.png" />
-    <Content Include="Content\Images\teachers.jpg" />
+    <Content Include="Content\Images\teacher.jpg" />
     <Content Include="Content\Images\teen.png" />
     <Content Include="Content\Images\test1.jpg" />
     <Content Include="Content\Images\test2.jpg" />
